# devos

./: .gitignore  AGENTS.md  CLAUDE_CODE_PROMPT.md  DEVOS_HANDOFF.md  alembic.ini  pyproject.toml
.devos/: constraints.md
devos/: cli.py  main.py
devos/agents/: __init__.py  base.py  claude_code.py
devos/auth/: __init__.py  dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
devos/context/: __init__.py  assembler.py  distiller.py  injector.py
devos/core/: config.py  constants.py  database.py  exceptions.py  middleware.py  utils.py
devos/dashboard/: routes.py  schemas.py  service.py  sorting.py  truncation.py
devos/decomposition/: dependency_graph.py  spec_parser.py  task_graph.py
devos/execution/: __init__.py  monitor.py  reaction.py  spawner.py  wave_runner.py  worktree.py
devos/planning/: interview.py  planning_agent.py  spec_generator.py
devos/synthesis/: __init__.py  collector.py  merger.py  validator.py
devos/tasks/: __init__.py  enums.py  exceptions.py  models.py  repository.py  routes.py  schemas.py  service.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
spec/: 01_functional.md  02_data_model.md  03_api_contract.md  04_components.md  05_acceptance.md
tests/: api_smoke_test.py
tests/context/: test_assembly_layer.py
tests/execution/: test_execution_layer.py  test_wave_runner.py
tests/integration/: conftest.py  test_auth.py  test_dashboard.py  test_task_creation.py  test_task_deletion.py  test_task_editing.py  test_task_properties.py  test_task_status.py
(+1 files in other folders)
